--- a/src/App.css
+++ b/src/App.css
@@ -191,14 +191,22 @@ aside {
   height: 60%;
 }
 
+.otherwebsiteimgp2 {
+  width: 100%;
+  height: 60%;
+}
+
 .layer1logo {
   width: 75%;
   margin-top: 40px;
+  margin-bottom: 15px;
 }
 
 .textCardMoreWebsites {
   color: white;
   text-align: center;
+  font-size: 25px;
+  margin-top: 1px;
 }
 
 .newsRestContainer {
