--- a/src/App.css
+++ b/src/App.css
@@ -193,11 +193,22 @@ aside {
 
 .otherwebsiteimgp2 {
   width: 100%;
-  height: 60%;
+  height: 180px;
+  border: none;
+  margin-left: -px;
+
+}
+
+.l0{
+  margin-bottom: 20px !important;
+}
+
+.layer0logo {
+  margin-top: 20px;
+  width: 35%;
 }
 
 .layer1logo {
-  width: 75%;
   margin-top: 40px;
   margin-bottom: 15px;
 }
@@ -241,6 +252,12 @@ aside {
 }
 
 .layer1div {
+  height: 170px;
+  position: relative;
+  text-align: center;
+}
+
+.layer0div {
   height: 170px;
   position: relative;
   text-align: center;
